"Update index.html, Create two recipes
Update index.html to include links to three recipes,
Created cereal recipe and chicken soup recipe
with descriptions, ingredients, and steps"

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,27 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="A beautiful handmade lasagna" width="300">
+        <h2>Description</h2>
+        <p>A beautiful, handmade lasagna from scratch. It takes just <strong><em>3</em> ingredients</strong> and <strong><em>13</em> minutes</strong>.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 lb Lasagna noodles</li>
+            <li>1 14oz can Tomato paste</li>
+            <li>3 TBSP Salt</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Open the noodles.</li>
+            <li>Slam them, as hard as possible, into a <strong>glass</strong> dish.</li>
+            <li>Open the tomato paste.</li>
+            <li>Take a lick, that ones for daddy.</li>
+            <li>Dump the can onto the noodles.</li>
+            <li>Add salt and mix together.</li>
+            <li>Add additional salt for taste.</li>
+            <li>Place into the oven at 350 degrees (celcius). Do <em>NOT</em> preheat the oven.</li>
+            <li>Cook for 13 minutes.</li>
+            <li>Call the fire department and ask them to bring a homemade lasagna.</li>
+        </ol>
     </body>
 </html>
